# zero2prod

./: Cargo.toml  Dockerfile  configuration.yaml  spec.yaml
.github/workflows/: general.yml  rust.yml
configuration/: base.yaml  local.yaml  production.yaml
migrations/: 20251231214035_create_subscriptions_table.sql  20260103145706_add_status_to_subscriptions.sql  20260103150016_make_status_not_null_in_subscriptions.sql  20260103150248_create_subscription_tokens_table.sql  20260104174815_create_users_table.sql  20260104180602_rename_password_column.sql  20260104203305_add_salt_to_users.sql  20260104204558_remove_salt_from_users.sql  20260115163729_seed_user.sql
scripts/: check.sh  init_db.sh  init_redis.sh
src/: configuration.rs  email_client.rs  issue_delivery_worker.rs  lib.rs  main.rs  session_state.rs  startup.rs  telemetry.rs  utils.rs
src/authentication/: middleware.rs  mod.rs  password.rs
src/domain/: subscriber_email.rs  subscriber_name.rs
src/idempotency/: key.rs  mod.rs  persistence.rs
src/routes/: mod.rs  newsletters.rs  subscriptions.rs  subscriptions_confirm.rs
src/routes/admin/: dashboard.rs  logout.rs  mod.rs
src/routes/admin/newsletter/: get.rs  post.rs
src/routes/admin/password/: get.rs  mod.rs  post.rs
src/routes/home/: home.html  mod.rs
src/routes/login/: get.rs  login.html  mod.rs  post.rs
tests/: health_check.rs
tests/api/: admin_dashboard.rs  change_password.rs  health_check.rs  helpers.rs  login.rs  main.rs  newsletter.rs  subscriptions.rs  subscriptions_confirm.rs
