[package]
name = "zero2prod"
version = "0.1.0"
edition = "2024"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "zero2prod"

[dependencies]
config = { version = "0.14", default-features = false, features = ["yaml"] }
actix-web = "4"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "rt"] }
serde = { version = "1", features = ["derive"] }
serde-aux = "4"
chrono = { version = "0.4.22", default-features=false, features = ["clock"] }
tracing = { version = "0.1", features = ["log"] }
tracing-log = "0.2"
tracing-subscriber = { version = "0.3", features = ["registry", "env-filter"] }
tracing-bunyan-formatter = "0.3"
secrecy = { version = "0.8", features = ["serde"] }
tracing-actix-web = "0.7"
unicode-segmentation = "1"
claims = "0.7"
validator = "0.18"
rand = { version = "0.8", features = ["std_rng"] }
thiserror = "1"
anyhow = "1"
base64 = "0.22"
argon2 = { version = "0.5", features = ["std"] }
urlencoding = "2"
htmlescape = "0.3"
hmac = { version = "0.12", features = ["std"] }
sha2 = "0.10"
hex = "0.4"
actix-web-flash-messages = { version = "0.5", features = [ "cookies" ] }
actix-session = { version = "0.10", features = ["redis-session-rustls"] }
uuid = { version = "1", features = ["v4", "serde"] }
serde_json = "1"

[dependencies.sqlx]
version = "0.8"
default-features = false
features = [
    "runtime-tokio-rustls",
    "macros",
    "postgres",
    "uuid",
    "chrono",
    "migrate"
]

[dependencies.reqwest]
version = "0.11"
default-features = false
# We need the `json` feature flag to serialize/deserialize JSON payloads -- 'cookies' feature wasn't working with 0.12, so I reverted to 0.11
features = ["json", "rustls-tls", "cookies"]

[dev-dependencies]
fake = "2.9"
quickcheck = "1.0.3"
quickcheck_macros = "1"
wiremock = "0.6"
linkify = "0.10"
serde_urlencoded = "0.7.1"
